fix(deps): bump (dev)Dependencies, simplify output structure, prefer esm

--- a/package.json
+++ b/package.json
@@ -11,48 +11,47 @@
   ],
   "scripts": {
     "build": "run-p build:*",
-    "build:bundle": "r",
+    "build:r": "r",
     "build:ts": "tsc -b",
     "lint": "run-p lint:*",
     "lint:es": "eslint . --ext js,md,ts -f friendly",
     "lint:ts": "tslint -p . -t stylish",
-    "lint:tsc": "tsc",
+    "lint:tsc": "tsc --noEmit",
     "test": "ts-node --skip-ignore node_modules/.bin/jest",
-    "type-coverage": "type-coverage --cache --ignore-catch --detail --ignore-files *.d.ts --strict"
+    "type-coverage": "type-coverage --cache --detail --ignore-catch --ignore-files *.d.ts --strict"
   },
   "devDependencies": {
-    "@1stg/babel-preset": "^0.7.0",
+    "@1stg/babel-preset": "^0.7.4",
     "@1stg/commitlint-config": "^0.1.0",
-    "@1stg/eslint-config": "^0.12.12",
-    "@1stg/husky-config": "^0.3.0",
-    "@1stg/lint-staged": "^0.7.4",
-    "@1stg/prettier-config": "^0.2.0",
-    "@1stg/remark-config": "^0.2.1",
-    "@1stg/rollup-config": "^0.9.6",
-    "@1stg/tsconfig": "^0.5.4",
-    "@1stg/tslint-config": "^0.3.4",
-    "@babel/core": "^7.6.0",
+    "@1stg/eslint-config": "^0.12.20",
+    "@1stg/husky-config": "^0.3.1",
+    "@1stg/lint-staged": "^0.8.6",
+    "@1stg/prettier-config": "^0.4.2",
+    "@1stg/remark-config": "^0.2.2",
+    "@1stg/tsconfig": "^0.6.0",
+    "@1stg/tslint-config": "^0.4.3",
+    "@babel/core": "^7.6.2",
     "@commitlint/cli": "^8.2.0",
+    "@pkgr/rollup": "^0.2.4",
     "@types/cosmiconfig": "^5.0.3",
-    "@types/eslint": "^6.1.1",
+    "@types/eslint": "^6.1.2",
     "@types/jest": "^24.0.18",
-    "@types/node": "^12.7.5",
-    "@types/react": "^16.9.2",
-    "@types/rebass": "^4.0.0",
+    "@types/node": "^12.7.11",
+    "@types/react": "^16.9.5",
+    "@types/rebass": "^4.0.1",
     "@types/unist": "^2.0.3",
-    "eslint": "^6.4.0",
+    "eslint": "^6.5.1",
     "eslint-mdx": "link:packages/eslint-mdx/src",
     "eslint-plugin-mdx": "link:packages/eslint-plugin-mdx/src",
-    "husky": "^3.0.5",
+    "husky": "^3.0.8",
     "jest": "^24.9.0",
     "lerna": "^3.16.4",
     "lerna-changelog": "^0.8.2",
-    "lint-staged": "^9.3.0",
+    "lint-staged": "^9.4.1",
     "npm-run-all": "^4.1.5",
     "prettier": "1.18.2",
-    "prettier-plugin-pkg": "^0.3.0",
-    "react": "^16.9.0",
-    "rollup": "^1.21.4",
+    "react": "^16.10.2",
+    "rollup": "^1.23.1",
     "ts-jest": "^24.1.0",
     "ts-node": "^8.4.1",
     "tslint": "^5.20.0",
@@ -66,9 +65,10 @@
   },
   "eslintIgnore": [
     "**/fixtures/**",
-    "CHANGELOG.md",
     "coverage",
-    "lib"
+    "lib",
+    "CHANGELOG.md",
+    "!/*.js"
   ],
   "jest": {
     "collectCoverage": true,
