--- a/packages/eslint-mdx/package.json
+++ b/packages/eslint-mdx/package.json
@@ -9,10 +9,11 @@
   "engines": {
     "node": ">=7.0.0"
   },
-  "main": "lib/es",
-  "module": "lib/esm",
+  "main": "lib/cjs",
+  "module": "lib",
   "es2015": "lib/es2015",
-  "types": "lib/types",
+  "fesm5": "lib/esm",
+  "types": "lib",
   "files": [
     "lib",
     "typings.d.ts"
@@ -29,9 +30,9 @@
   },
   "dependencies": {
     "espree": "^6.1.1",
-    "remark-mdx": "^1.4.5",
+    "remark-mdx": "^1.5.0",
     "remark-parse": "^7.0.1",
     "tslib": "^1.10.0",
-    "unified": "^8.4.0"
+    "unified": "^8.4.1"
   }
 }
