--- a/packages/eslint-mdx/tsconfig.json
+++ b/packages/eslint-mdx/tsconfig.json
@@ -3,7 +3,6 @@
   "compilerOptions": {
     "composite": true,
     "rootDir": "src",
-    "outDir": "lib/es",
-    "declarationDir": "lib/types"
+    "outDir": "lib"
   }
 }
