--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -1,3 +1,7 @@
 {
-  "extends": "@1stg/tsconfig/loose"
+  "extends": "@1stg/tsconfig/lib",
+  "compilerOptions": {
+    "strictFunctionTypes": false,
+    "strictNullChecks": false
+  }
 }
