--- a/package.json
+++ b/package.json
@@ -24,37 +24,20 @@
     "type-coverage": "type-coverage --cache --detail --ignore-catch --ignore-files *.d.ts --strict"
   },
   "devDependencies": {
-    "@1stg/babel-preset": "^0.7.10",
-    "@1stg/commitlint-config": "^0.1.2",
-    "@1stg/eslint-config": "^0.13.2",
-    "@1stg/husky-config": "^0.3.2",
-    "@1stg/lint-staged": "^0.8.11",
-    "@1stg/prettier-config": "^0.4.3",
-    "@1stg/remark-config": "^0.2.2",
-    "@1stg/tsconfig": "^0.6.1",
-    "@1stg/tslint-config": "^0.4.4",
-    "@babel/core": "^7.6.4",
-    "@commitlint/cli": "^8.2.0",
-    "@pkgr/rollup": "^0.3.0",
+    "@1stg/lib-config": "^0.1.6",
+    "@1stg/tslint-config": "^0.5.5",
     "@types/cosmiconfig": "^5.0.3",
-    "@types/eslint": "^6.1.2",
-    "@types/jest": "^24.0.19",
-    "@types/node": "^12.11.5",
-    "@types/react": "^16.9.9",
+    "@types/eslint": "^6.1.3",
+    "@types/jest": "^24.0.21",
+    "@types/node": "^12.12.5",
+    "@types/react": "^16.9.11",
     "@types/rebass": "^4.0.3",
     "@types/unist": "^2.0.3",
-    "eslint": "^6.5.1",
     "eslint-mdx": "link:packages/eslint-mdx/src",
     "eslint-plugin-mdx": "link:packages/eslint-plugin-mdx/src",
-    "husky": "^3.0.9",
-    "jest": "^24.9.0",
     "lerna": "^3.18.3",
-    "lerna-changelog": "^0.8.2",
-    "lint-staged": "^9.4.2",
     "npm-run-all": "^4.1.5",
-    "prettier": "1.18.2",
     "react": "^16.11.0",
-    "rollup": "^1.25.1",
     "ts-jest": "^24.1.0",
     "ts-node": "^8.4.1",
     "tslint": "^5.20.0",
@@ -62,6 +45,7 @@
     "typescript": "^3.6.4"
   },
   "resolutions": {
+    "@babel/core": "^7.6.4",
     "typescript": "^3.6.4"
   },
   "commitlint": {
