--- a/package.json
+++ b/package.json
@@ -24,29 +24,30 @@
     "type-coverage": "type-coverage --cache --detail --ignore-catch --ignore-files *.d.ts --strict"
   },
   "devDependencies": {
-    "@1stg/lib-config": "^0.1.6",
-    "@1stg/tslint-config": "^0.5.5",
-    "@types/cosmiconfig": "^5.0.3",
+    "@1stg/lib-config": "^0.1.13",
+    "@1stg/tslint-config": "^0.5.6",
     "@types/eslint": "^6.1.3",
-    "@types/jest": "^24.0.21",
-    "@types/node": "^12.12.5",
+    "@types/jest": "^24.0.22",
+    "@types/node": "^12.12.7",
     "@types/react": "^16.9.11",
     "@types/rebass": "^4.0.3",
     "@types/unist": "^2.0.3",
+    "cosmiconfig": "^6.0.0",
     "eslint-mdx": "link:packages/eslint-mdx/src",
     "eslint-plugin-mdx": "link:packages/eslint-plugin-mdx/src",
-    "lerna": "^3.18.3",
+    "lerna": "^3.18.4",
     "npm-run-all": "^4.1.5",
     "react": "^16.11.0",
     "ts-jest": "^24.1.0",
-    "ts-node": "^8.4.1",
-    "tslint": "^5.20.0",
-    "type-coverage": "^2.3.0",
-    "typescript": "^3.6.4"
+    "ts-node": "^8.5.0",
+    "tslint": "^5.20.1",
+    "type-coverage": "^2.3.0"
   },
   "resolutions": {
-    "@babel/core": "^7.6.4",
-    "typescript": "^3.6.4"
+    "@babel/core": "^7.7.2",
+    "babel-eslint": "^10.0.3",
+    "eslint-plugin-prettier": "^3.1.1",
+    "typescript": "^3.7.2"
   },
   "commitlint": {
     "extends": [
