--- a/package.json
+++ b/package.json
@@ -20,15 +20,15 @@
     "lint:tsc": "tsc --incremental --noEmit",
     "prelint": "yarn build",
     "pretest": "yarn clean",
-    "test": "ts-node --skip-ignore -T node_modules/.bin/jest",
+    "test": "ts-node --skip-ignore node_modules/.bin/jest",
     "type-coverage": "type-coverage --cache --detail --ignore-catch --ignore-files *.d.ts --strict"
   },
   "devDependencies": {
-    "@1stg/lib-config": "^0.1.13",
+    "@1stg/lib-config": "^0.1.14",
     "@1stg/tslint-config": "^0.5.6",
     "@types/eslint": "^6.1.3",
-    "@types/jest": "^24.0.22",
-    "@types/node": "^12.12.7",
+    "@types/jest": "^24.0.23",
+    "@types/node": "^12.12.8",
     "@types/react": "^16.9.11",
     "@types/rebass": "^4.0.3",
     "@types/unist": "^2.0.3",
@@ -37,15 +37,14 @@
     "eslint-plugin-mdx": "link:packages/eslint-plugin-mdx/src",
     "lerna": "^3.18.4",
     "npm-run-all": "^4.1.5",
-    "react": "^16.11.0",
+    "react": "^16.12.0",
     "ts-jest": "^24.1.0",
-    "ts-node": "^8.5.0",
+    "ts-node": "^8.5.2",
     "tslint": "^5.20.1",
     "type-coverage": "^2.3.0"
   },
   "resolutions": {
     "@babel/core": "^7.7.2",
-    "babel-eslint": "^10.0.3",
     "eslint-plugin-prettier": "^3.1.1",
     "typescript": "^3.7.2"
   },
