--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "@rxts/eslint-mdx",
+  "name": "@mdx-js/eslint",
   "version": "0.0.0",
   "description": "ESLint Parser/Plugin for MDX",
-  "repository": "git@github.com:rx-ts/eslint-mdx.git",
+  "repository": "git+https://github.com/mdx-js/eslint-mdx.git",
   "author": "JounQin <admin@1stg.me>",
   "license": "MIT",
   "private": true,
@@ -28,8 +28,8 @@
     "@1stg/tslint-config": "^0.5.7",
     "@types/eslint": "^6.1.3",
     "@types/jest": "^24.0.23",
-    "@types/node": "^12.12.14",
-    "@types/react": "^16.9.13",
+    "@types/node": "^12.12.16",
+    "@types/react": "^16.9.16",
     "@types/rebass": "^4.0.3",
     "@types/unist": "^2.0.3",
     "cosmiconfig": "^6.0.0",
@@ -44,9 +44,10 @@
     "type-coverage": "^2.3.1"
   },
   "resolutions": {
-    "@babel/core": "^7.7.4",
+    "@babel/core": "^7.7.5",
+    "@babel/preset-env": "^7.7.6",
     "eslint-plugin-prettier": "^3.1.1",
-    "typescript": "^3.7.2"
+    "typescript": "^3.7.3"
   },
   "commitlint": {
     "extends": [
