--- a/package.json
+++ b/package.json
@@ -21,34 +21,35 @@
     "prelint": "yarn build",
     "prepublishOnly": "yarn build",
     "pretest": "yarn clean",
+    "publish": "lerna publish --create-release github --yes",
     "test": "ts-node --skip-ignore node_modules/.bin/jest",
     "type-coverage": "type-coverage --cache --detail --ignore-catch --ignore-files *.d.ts --strict"
   },
   "devDependencies": {
-    "@1stg/lib-config": "^0.1.15",
-    "@1stg/tslint-config": "^0.5.7",
-    "@types/eslint": "^6.1.3",
-    "@types/jest": "^24.0.23",
-    "@types/node": "^12.12.18",
-    "@types/react": "^16.9.16",
-    "@types/rebass": "^4.0.3",
+    "@1stg/lib-config": "^0.1.19",
+    "@1stg/tslint-config": "^0.5.8",
+    "@types/eslint": "^6.1.7",
+    "@types/jest": "^24.9.1",
+    "@types/node": "^13.5.0",
+    "@types/react": "^16.9.19",
+    "@types/rebass": "^4.0.4",
     "@types/unist": "^2.0.3",
     "cosmiconfig": "^6.0.0",
     "eslint-mdx": "link:packages/eslint-mdx/src",
     "eslint-plugin-mdx": "link:packages/eslint-plugin-mdx/src",
-    "lerna": "^3.19.0",
+    "lerna": "^3.20.2",
     "npm-run-all": "^4.1.5",
     "react": "^16.12.0",
-    "ts-jest": "^24.2.0",
-    "ts-node": "^8.5.4",
-    "tslint": "^5.20.1",
-    "type-coverage": "^2.3.1"
+    "ts-jest": "^25.0.0",
+    "ts-node": "^8.6.2",
+    "tslint": "^6.0.0",
+    "type-coverage": "^2.4.0"
   },
   "resolutions": {
-    "@babel/core": "^7.7.5",
-    "@babel/preset-env": "^7.7.6",
+    "@babel/core": "^7.8.3",
+    "@babel/preset-env": "^7.8.3",
     "eslint-plugin-prettier": "^3.1.2",
-    "typescript": "^3.7.3"
+    "typescript": "^3.7.5"
   },
   "commitlint": {
     "extends": [
