--- a/package.json
+++ b/package.json
@@ -14,20 +14,20 @@
     "build:r": "r",
     "build:ts": "tsc -b",
     "clean": "rimraf packages/*/{lib,*.tsbuildinfo}",
+    "deploy": "lerna publish --create-release github --yes",
     "lint": "run-p lint:*",
     "lint:es": "cross-env PARSER_NO_WATCH=true eslint . --cache --ext js,md,ts -f friendly",
     "lint:ts": "tslint -p . -t stylish",
     "lint:tsc": "tsc --incremental --noEmit",
+    "predeploy": "yarn build",
     "prelint": "yarn build",
-    "prepublishOnly": "yarn build",
     "pretest": "yarn clean",
-    "publish": "lerna publish --create-release github --yes",
     "test": "ts-node --skip-ignore node_modules/.bin/jest",
     "type-coverage": "type-coverage --cache --detail --ignore-catch --ignore-files *.d.ts --strict"
   },
   "devDependencies": {
-    "@1stg/lib-config": "^0.1.19",
-    "@1stg/tslint-config": "^0.5.8",
+    "@1stg/lib-config": "^0.1.20",
+    "@1stg/tslint-config": "^0.5.9",
     "@types/eslint": "^6.1.7",
     "@types/jest": "^24.9.1",
     "@types/node": "^13.5.0",
