build: integration with yarn-deduplicate

--- a/package.json
+++ b/package.json
@@ -11,26 +11,27 @@
   ],
   "scripts": {
     "build": "run-p build:*",
-    "build:r": "r",
+    "build:r": "r -p",
     "build:ts": "tsc -b",
     "clean": "rimraf packages/*/{lib,*.tsbuildinfo}",
     "deploy": "lerna publish --create-release github --yes",
     "lint": "run-p lint:*",
     "lint:es": "cross-env PARSER_NO_WATCH=true eslint . --cache --ext js,md,ts -f friendly",
     "lint:ts": "tslint -p . -t stylish",
-    "lint:tsc": "tsc --incremental --noEmit",
+    "lint:tsc": "tsc",
+    "postinstall": "yarn-deduplicate || exit 0",
     "predeploy": "yarn build",
     "prelint": "yarn build",
     "pretest": "yarn clean",
     "test": "ts-node --skip-ignore node_modules/.bin/jest",
-    "type-coverage": "type-coverage --cache --detail --ignore-catch --ignore-files *.d.ts --strict"
+    "type-coverage": "type-coverage --cache --detail --ignore-catch --ignore-files '**/*.d.ts' --strict"
   },
   "devDependencies": {
-    "@1stg/lib-config": "^0.1.20",
-    "@1stg/tslint-config": "^0.5.9",
+    "@1stg/lib-config": "^0.2.0",
+    "@1stg/tslint-config": "^0.6.0",
     "@types/eslint": "^6.1.7",
-    "@types/jest": "^24.9.1",
-    "@types/node": "^13.5.0",
+    "@types/jest": "^25.1.1",
+    "@types/node": "^13.7.0",
     "@types/react": "^16.9.19",
     "@types/rebass": "^4.0.4",
     "@types/unist": "^2.0.3",
@@ -40,14 +41,15 @@
     "lerna": "^3.20.2",
     "npm-run-all": "^4.1.5",
     "react": "^16.12.0",
-    "ts-jest": "^25.0.0",
+    "ts-jest": "^25.1.0",
     "ts-node": "^8.6.2",
     "tslint": "^6.0.0",
-    "type-coverage": "^2.4.0"
+    "type-coverage": "^2.4.0",
+    "yarn-deduplicate": "^1.1.1"
   },
   "resolutions": {
-    "@babel/core": "^7.8.3",
-    "@babel/preset-env": "^7.8.3",
+    "@babel/core": "^7.8.4",
+    "@babel/preset-env": "^7.8.4",
     "eslint-plugin-prettier": "^3.1.2",
     "typescript": "^3.7.5"
   },
