--- a/packages/eslint-plugin-mdx/package.json
+++ b/packages/eslint-plugin-mdx/package.json
@@ -24,10 +24,10 @@
   ],
   "keywords": [
     "eslint",
+    "eslint-mdx",
     "eslint-plugin",
     "eslint-plugin-mdx",
-    "mdx",
-    "eslint-mdx"
+    "mdx"
   ],
   "peerDependencies": {
     "eslint": ">=5.0.0"
@@ -35,13 +35,13 @@
   "dependencies": {
     "cosmiconfig": "^6.0.0",
     "eslint-mdx": "^1.6.8",
-    "eslint-plugin-react": ">=7.0.0",
-    "remark-mdx": "^1.5.5",
-    "remark-parse": "^7.0.2",
-    "remark-stringify": "^7.0.4",
-    "tslib": "^1.10.0",
-    "unified": "^8.4.2",
-    "vfile": "^4.0.2"
+    "eslint-plugin-react": "^7.19.0",
+    "remark-mdx": "^1.5.8",
+    "remark-parse": "^8.0.0",
+    "remark-stringify": "^8.0.0",
+    "tslib": "^1.11.1",
+    "unified": "^9.0.0",
+    "vfile": "^4.1.0"
   },
   "optionalDependencies": {
     "rebass": "^4.0.7"
