--- a/package.json
+++ b/package.json
@@ -27,11 +27,11 @@
     "type-coverage": "type-coverage --cache --detail --ignore-catch --ignore-files '**/*.d.ts' --strict"
   },
   "devDependencies": {
-    "@1stg/lib-config": "^0.4.5",
-    "@1stg/tslint-config": "^0.8.3",
+    "@1stg/lib-config": "^0.5.1",
+    "@1stg/tslint-config": "^0.8.4",
     "@types/eslint": "^6.8.0",
     "@types/jest": "^25.2.1",
-    "@types/node": "^13.13.0",
+    "@types/node": "^13.13.4",
     "@types/react": "^16.9.34",
     "@types/rebass": "^4.0.5",
     "@types/unist": "^2.0.3",
@@ -42,15 +42,15 @@
     "npm-run-all": "^4.1.5",
     "react": "^16.13.1",
     "ts-jest": "^25.4.0",
-    "ts-node": "^8.8.2",
-    "tslint": "^6.1.1",
+    "ts-node": "^8.9.1",
+    "tslint": "^6.1.2",
     "type-coverage": "^2.4.2",
     "yarn-deduplicate": "^2.0.0"
   },
   "resolutions": {
-    "@babel/core": "^7.9.0",
-    "@babel/preset-env": "^7.9.5",
-    "eslint-plugin-prettier": "^3.1.3",
+    "@babel/core": "^7.9.6",
+    "@babel/preset-env": "^7.9.6",
+    "@types/estree": "^0.0.44",
     "typescript": "^3.8.3"
   },
   "commitlint": {
