feat: bump (dev)Dependencies, fix: consider first jsx node as open tag - close #272 (#273)
* feat: bump (dev)Dependencies, fix related errors

* fix: consider first jsx node as open tag - close #272

the parsed remark-mdx jsx nodes are not precise, but it will be resolved in v2

* chore: lerna config changes

* test: do not use user environment related test cases

* fix: open close tag regex, push remaining nodes

* fix: part of #207, markdown in jsx is still not supported

improve fixtures test case

* test: remove unnecessary fixture

* docs: add comments for // @ts-ignore and never

--- a/lerna.json
+++ b/lerna.json
@@ -15,16 +15,14 @@
       "allowBranch": [
         "develop",
         "master"
-      ],
-      "conventionalCommits": true,
-      "gitReset": false,
-      "message": "chore(release): %s"
+      ]
     },
     "publish": {
       "ignoreChanges": [
         "**/test/**",
-        "*.md"
-      ]
+        "**/*.md"
+      ],
+      "message": "chore: release package(s)"
     }
   }
 }
