--- a/package.json
+++ b/package.json
@@ -14,41 +14,42 @@
     "build:r": "r -p",
     "build:ts": "tsc -b",
     "clean": "rimraf packages/*/{lib,*.tsbuildinfo}",
-    "deploy": "lerna publish --create-release github --yes",
     "lint": "run-p lint:*",
     "lint:es": "cross-env PARSER_NO_WATCH=true eslint . --cache --ext js,md,ts -f friendly",
     "lint:ts": "tslint -p . -t stylish",
     "lint:tsc": "tsc",
     "postinstall": "yarn-deduplicate || exit 0",
-    "predeploy": "yarn build",
-    "prelint": "yarn build",
+    "prelint": "yarn build:ts",
+    "prerelease": "yarn build",
     "pretest": "yarn clean",
+    "release": "lerna publish --conventional-commits --create-release github --yes",
     "test": "ts-node --skip-ignore node_modules/.bin/jest",
     "type-coverage": "type-coverage --cache --detail --ignore-catch --ignore-files '**/*.d.ts' --strict --update"
   },
   "devDependencies": {
-    "@1stg/lib-config": "^0.5.5",
-    "@1stg/tslint-config": "^0.9.2",
-    "@types/eslint": "^7.2.0",
+    "@1stg/lib-config": "^1.0.5",
+    "@1stg/tslint-config": "^1.0.0",
+    "@types/eslint": "^7.2.6",
     "@types/jest": "^26.0.20",
-    "@types/node": "^14.14.22",
-    "@types/react": "^16.14.2",
+    "@types/node": "^14.14.31",
+    "@types/react": "^17.0.2",
     "@types/rebass": "^4.0.7",
     "@types/unist": "^2.0.3",
     "eslint-mdx": "link:packages/eslint-mdx/src",
     "eslint-plugin-mdx": "link:packages/eslint-plugin-mdx/src",
     "lerna": "^3.22.1",
     "npm-run-all": "^4.1.5",
-    "react": "^16.14.0",
-    "ts-jest": "^26.5.0",
-    "ts-node": "^8.10.2",
+    "react": "^17.0.1",
+    "ts-jest": "^26.5.1",
+    "ts-node": "^9.1.1",
     "tslint": "^6.1.3",
-    "type-coverage": "^2.14.8",
-    "typescript": "^3.9.7",
-    "yarn-deduplicate": "^2.1.1"
+    "type-coverage": "^2.15.1",
+    "typescript": "^4.3.0-dev.20210220",
+    "yarn-deduplicate": "^3.1.0"
   },
   "resolutions": {
-    "prettier": "^2.2.1"
+    "prettier": "^2.2.1",
+    "tslib": "^2.1.0"
   },
   "commitlint": {
     "extends": [
