--- a/package.json
+++ b/package.json
@@ -24,27 +24,27 @@
     "pretest": "yarn clean",
     "release": "lerna publish --conventional-commits --create-release github --yes",
     "test": "ts-node --skip-ignore node_modules/.bin/jest",
-    "type-coverage": "type-coverage --cache --detail --ignore-catch --ignore-files '**/*.d.ts' --strict --update"
+    "typecov": "type-coverage"
   },
   "devDependencies": {
-    "@1stg/lib-config": "^1.0.5",
-    "@1stg/tslint-config": "^1.0.0",
+    "@1stg/lib-config": "^1.1.8",
+    "@1stg/tslint-config": "^1.0.1",
     "@types/eslint": "^7.2.6",
     "@types/jest": "^26.0.20",
     "@types/node": "^14.14.31",
     "@types/react": "^17.0.2",
-    "@types/rebass": "^4.0.7",
+    "@types/rebass": "^4.0.8",
     "@types/unist": "^2.0.3",
     "eslint-mdx": "link:packages/eslint-mdx/src",
     "eslint-plugin-mdx": "link:packages/eslint-plugin-mdx/src",
     "lerna": "^3.22.1",
     "npm-run-all": "^4.1.5",
     "react": "^17.0.1",
-    "ts-jest": "^26.5.1",
+    "ts-jest": "^26.5.2",
     "ts-node": "^9.1.1",
     "tslint": "^6.1.3",
-    "type-coverage": "^2.15.1",
-    "typescript": "^4.3.0-dev.20210220",
+    "type-coverage": "^2.16.3",
+    "typescript": "^4.2.2",
     "yarn-deduplicate": "^3.1.0"
   },
   "resolutions": {
@@ -87,6 +87,15 @@
     ]
   },
   "typeCoverage": {
-    "atLeast": 97.96
+    "atLeast": 99.37,
+    "cache": true,
+    "detail": true,
+    "ignoreAsAssertion": true,
+    "ignoreCatch": true,
+    "ignoreFiles": [
+      "**/*.d.ts"
+    ],
+    "strict": true,
+    "update": true
   }
 }
