--- a/package.json
+++ b/package.json
@@ -17,17 +17,17 @@
     "lint": "run-p lint:*",
     "lint:es": "cross-env PARSER_NO_WATCH=true eslint . --cache --ext js,md,ts -f friendly",
     "lint:ts": "tslint -p . -t stylish",
-    "postinstall": "yarn-deduplicate --strategy fewer || exit 0",
+    "postinstall": "simple-git-hooks && yarn-deduplicate --strategy fewer || exit 0",
     "prerelease": "yarn build",
     "release": "lerna publish --conventional-commits --create-release github --yes",
     "test": "jest",
     "typecov": "type-coverage"
   },
   "devDependencies": {
-    "@1stg/lib-config": "^1.2.0",
+    "@1stg/lib-config": "^1.2.4",
     "@1stg/tslint-config": "^1.2.0",
     "@types/eslint": "^7.2.7",
-    "@types/jest": "^26.0.20",
+    "@types/jest": "^26.0.21",
     "@types/node": "^14.14.35",
     "@types/react": "^17.0.3",
     "@types/unist": "^2.0.3",
@@ -35,8 +35,8 @@
     "eslint-plugin-mdx": "link:packages/eslint-plugin-mdx/src",
     "lerna": "^4.0.0",
     "npm-run-all": "^4.1.5",
-    "react": "^17.0.1",
-    "ts-jest": "^26.5.3",
+    "react": "^17.0.2",
+    "ts-jest": "^26.5.4",
     "ts-node": "^9.1.1",
     "tslint": "^6.1.3",
     "type-coverage": "^2.17.0",
