--- a/packages/eslint-plugin-mdx/package.json
+++ b/packages/eslint-plugin-mdx/package.json
@@ -35,10 +35,11 @@
   "dependencies": {
     "cosmiconfig": "^7.0.0",
     "eslint-mdx": "^1.12.0",
+    "eslint-plugin-markdown": "^2.0.1",
     "remark-mdx": "^1.6.22",
     "remark-parse": "^8.0.3",
     "remark-stringify": "^8.1.1",
-    "tslib": "^2.1.0",
+    "tslib": "^2.2.0",
     "unified": "^9.2.1",
     "vfile": "^4.2.1"
   }
