--- a/packages/eslint-plugin-mdx/package.json
+++ b/packages/eslint-plugin-mdx/package.json
@@ -13,8 +13,8 @@
   "engines": {
     "node": ">=10.0.0"
   },
-  "main": "lib/cjs",
-  "module": "lib",
+  "main": "lib",
+  "module": "lib/esm",
   "es2015": "lib/es2015",
   "fesm5": "lib/esm",
   "types": "lib",
@@ -35,7 +35,7 @@
   "dependencies": {
     "cosmiconfig": "^7.0.0",
     "eslint-mdx": "^1.12.0",
-    "eslint-plugin-markdown": "^2.0.1",
+    "eslint-plugin-markdown": "^2.1.0",
     "remark-mdx": "^1.6.22",
     "remark-parse": "^8.0.3",
     "remark-stringify": "^8.1.1",
