--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -1,7 +1,6 @@
 {
-  "extends": "./node_modules/@1stg/tsconfig/lib.json",
+  "extends": "./node_modules/@1stg/tsconfig/node",
   "compilerOptions": {
-    "module": "CommonJS",
     "strictFunctionTypes": false,
     "strictNullChecks": false
   }
