--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "lint:es": "cross-env PARSER_NO_WATCH=true eslint . --cache --ext js,md,ts -f friendly",
     "lint:ts": "tslint -p . -t stylish",
     "postinstall": "simple-git-hooks && yarn-deduplicate --strategy fewer || exit 0",
+    "prelint": "yarn build",
     "prerelease": "yarn build",
     "release": "lerna publish --conventional-commits --create-release github --yes",
     "test": "jest",
@@ -35,6 +36,7 @@
     "lerna": "^4.0.0",
     "npm-run-all": "^4.1.5",
     "react": "^17.0.2",
+    "remark-validate-links": "^10.0.4",
     "ts-jest": "^26.5.5",
     "ts-node": "^9.1.1",
     "tslint": "^6.1.3",
