--- a/packages/eslint-plugin-mdx/package.json
+++ b/packages/eslint-plugin-mdx/package.json
@@ -39,6 +39,7 @@
     "remark-mdx": "^1.6.22",
     "remark-parse": "^8.0.3",
     "remark-stringify": "^8.1.1",
+    "synckit": "^0.1.5",
     "tslib": "^2.2.0",
     "unified": "^9.2.1",
     "vfile": "^4.2.1"
