--- a/package.json
+++ b/package.json
@@ -25,29 +25,29 @@
     "typecov": "type-coverage"
   },
   "devDependencies": {
-    "@1stg/lib-config": "^1.2.10",
-    "@1stg/tslint-config": "^1.2.0",
-    "@types/eslint": "^7.2.10",
+    "@1stg/lib-config": "^3.0.0",
+    "@1stg/tslint-config": "^2.0.0",
+    "@types/eslint": "^7.2.14",
     "@types/eslint-plugin-markdown": "^2.0.0",
-    "@types/jest": "^26.0.23",
-    "@types/node": "^14.14.41",
-    "@types/react": "^17.0.4",
-    "@types/unist": "^2.0.3",
+    "@types/jest": "^26.0.24",
+    "@types/node": "^16.3.0",
+    "@types/react": "^17.0.14",
+    "@types/unist": "^2.0.5",
     "lerna": "^4.0.0",
     "npm-run-all": "^4.1.5",
     "react": "^17.0.2",
     "remark-validate-links": "^10.0.4",
-    "ts-jest": "^26.5.5",
-    "ts-node": "^9.1.1",
+    "ts-jest": "^27.0.3",
+    "ts-node": "^10.0.0",
     "tslint": "^6.1.3",
-    "type-coverage": "^2.17.3",
-    "typescript": "^4.2.4",
+    "type-coverage": "^2.18.0",
+    "typescript": "^4.3.5",
     "yarn-deduplicate": "^3.1.0"
   },
   "resolutions": {
-    "@babel/core": "^7.13.16",
-    "prettier": "^2.2.1",
-    "tslib": "^2.2.0"
+    "@babel/core": "^7.14.6",
+    "prettier": "^2.3.2",
+    "tslib": "^2.3.0"
   },
   "commitlint": {
     "extends": [
@@ -89,6 +89,10 @@
         [
           2
         ]
+      ],
+      [
+        "validate-links",
+        true
       ]
     ]
   },
