feat: call `creatSyncFn` lazily for performance (#324)

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "build:ts": "tsc -b",
     "clean": "rimraf packages/*/{lib,*.tsbuildinfo} node_modules/@1stg/eslint-config/node_modules",
     "lint": "run-p lint:*",
-    "lint:es": "cross-env PARSER_NO_WATCH=true eslint . --cache --ext js,md,ts -f friendly",
+    "lint:es": "eslint . --cache -f friendly",
     "lint:ts": "tslint -p . -t stylish",
     "postinstall": "simple-git-hooks && yarn-deduplicate --strategy fewer || exit 0",
     "prelint": "yarn build",
@@ -30,7 +30,7 @@
     "@types/eslint": "^7.2.14",
     "@types/eslint-plugin-markdown": "^2.0.0",
     "@types/jest": "^26.0.24",
-    "@types/node": "^16.3.0",
+    "@types/node": "^16.3.1",
     "@types/react": "^17.0.14",
     "@types/unist": "^2.0.5",
     "lerna": "^4.0.0",
@@ -38,7 +38,7 @@
     "react": "^17.0.2",
     "remark-validate-links": "^10.0.4",
     "ts-jest": "^27.0.3",
-    "ts-node": "^10.0.0",
+    "ts-node": "^10.1.0",
     "tslint": "^6.1.3",
     "type-coverage": "^2.18.0",
     "typescript": "^4.3.5",
