--- a/package.json
+++ b/package.json
@@ -29,25 +29,24 @@
     "@1stg/tslint-config": "^2.0.0",
     "@types/eslint": "^7.28.0",
     "@types/eslint-plugin-markdown": "^2.0.0",
-    "@types/jest": "^26.0.24",
-    "@types/node": "^16.3.1",
-    "@types/react": "^17.0.14",
-    "@types/unist": "^2.0.5",
+    "@types/jest": "^27.0.1",
+    "@types/node": "^16.7.1",
+    "@types/react": "^17.0.19",
+    "@types/unist": "^2.0.6",
     "lerna": "^4.0.0",
     "npm-run-all": "^4.1.5",
     "react": "^17.0.2",
+    "remark-frontmatter": "2",
     "remark-validate-links": "^10.0.4",
-    "ts-jest": "^27.0.3",
-    "ts-node": "^10.1.0",
+    "ts-jest": "^27.0.5",
+    "ts-node": "^10.2.1",
     "tslint": "^6.1.3",
     "type-coverage": "^2.18.0",
     "typescript": "^4.3.5",
     "yarn-deduplicate": "^3.1.0"
   },
   "resolutions": {
-    "@babel/core": "^7.14.6",
-    "prettier": "^2.3.2",
-    "tslib": "^2.3.0"
+    "prettier": "^2.3.2"
   },
   "commitlint": {
     "extends": [
@@ -83,6 +82,7 @@
   "prettier": "@1stg/prettier-config",
   "remarkConfig": {
     "plugins": [
+      "remark-frontmatter",
       "@1stg/remark-config",
       [
         "lint-no-duplicate-headings",
