--- a/packages/eslint-mdx/package.json
+++ b/packages/eslint-mdx/package.json
@@ -32,9 +32,11 @@
     "eslint": ">=5.0.0"
   },
   "dependencies": {
+    "cosmiconfig": "^7.0.0",
     "remark-mdx": "^1.6.22",
     "remark-parse": "^8.0.3",
-    "tslib": "^2.3.0",
+    "remark-stringify": "^8.1.1",
+    "tslib": "^2.3.1",
     "unified": "^9.2.1"
   }
 }
