--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "clean": "rimraf packages/*/{lib,*.tsbuildinfo} node_modules/@1stg/eslint-config/node_modules",
     "lint": "run-p lint:*",
     "lint:es": "eslint . --cache -f friendly",
-    "lint:ts": "tslint -p . -t stylish",
+    "lint:tsc": "tsc --noEmit",
     "postinstall": "simple-git-hooks && yarn-deduplicate --strategy fewer || exit 0",
     "prelint": "yarn build",
     "prerelease": "yarn build",
@@ -25,13 +25,12 @@
     "typecov": "type-coverage"
   },
   "devDependencies": {
-    "@1stg/lib-config": "^3.0.0",
-    "@1stg/tslint-config": "^2.1.0",
-    "@types/eslint": "^7.28.0",
+    "@1stg/lib-config": "^4.1.2",
+    "@types/eslint": "^7.28.1",
     "@types/eslint-plugin-markdown": "^2.0.0",
-    "@types/jest": "^27.0.1",
-    "@types/node": "^16.7.1",
-    "@types/react": "^17.0.19",
+    "@types/jest": "^27.0.2",
+    "@types/node": "^16.10.9",
+    "@types/react": "^17.0.29",
     "@types/unist": "^2.0.6",
     "lerna": "^4.0.0",
     "npm-run-all": "^4.1.5",
@@ -39,14 +38,13 @@
     "remark-frontmatter": "2",
     "remark-validate-links": "^10.0.4",
     "ts-jest": "^27.0.5",
-    "ts-node": "^10.2.1",
-    "tslint": "^6.1.3",
+    "ts-node": "^10.3.0",
     "type-coverage": "^2.18.2",
-    "typescript": "^4.3.5",
+    "typescript": "^4.4.4",
     "yarn-deduplicate": "^3.1.0"
   },
   "resolutions": {
-    "prettier": "^2.3.2"
+    "prettier": "^2.4.1"
   },
   "commitlint": {
     "extends": [
